Collections.singletonList where possible